# python-data-science-fundamentals

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci_tests.yml
data/: df_teste_ci.csv  generate_data.py
notebooks/: 1_otimizacao_performance.ipynb  2_modularidade_poo.ipynb
src/: datacleaner.py
tests/: test_datacleaner.py
